Fixed 34039 - added min-width to the admin searchbar on small devices.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -109,6 +109,7 @@ input[type="submit"], button {
 
     #toolbar form #searchbar {
         flex: 1 0 auto;
+        min-width: 160px;
         width: 0;
         height: 22px;
         margin: 0 10px 0 6px;
